--- a/pages_html/laNoteEnchantee.html
+++ b/pages_html/laNoteEnchantee.html
@@ -1,163 +1,175 @@
-
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../desing/default.css"/>
-  <title>Ohmyfood_À la française</title>
-  <script
-  src="https://kit.fontawesome.com/04b5a3f05a.js"
-  crossorigin="anonymous"
-  ></script>
- <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../desing/default.css" />
+    <title>Ohmyfood_À la française</title>
+    <script src="https://kit.fontawesome.com/04b5a3f05a.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
 </head>
+
 <body>
-
-  <header>
+    <header>
         <nav class="header_paletteDuGout">
-            <a href="../index.html" title="Allez à l'accuil">  <i class="fas fa-arrow-left"></i> </a>
-              <img src="../img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo"/>
+            <a href="../index.html" title="Allez à l'accuil">
+                <i class="fas fa-arrow-left"></i>
+            </a>
+            <img src="../img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo" />
         </nav>
-  </header>
+    </header>
 
- <main>  
-    <section class="restaurant"> 
-              <div class="Restaurant_img ">
-                <img
-                    src="../img/restaurants/La-note-enchantée.jpg"
-                      alt="La palette du goût"
-                      class="paletteDuGout_img"/>  
-              </div>
+    <main>
+        <section class="restaurant">
+            <div class="Restaurant_img">
+                <img src="../img/restaurants/La-note-enchantée.jpg" alt="La palette du goût" class="paletteDuGout_img" />
+            </div>
             <section class="restaurantEntresPlats">
-                  <div class="nomDuRestaurant_titre">
-                      <h2>La note enchantée</h2>
-                      <div class="section_restaurants_carte_description_souhait icone_coeur">
-                          <i class="far fa-heart fa-heart-1 heartGout"></i>
-                          <i class="fas fa-heart heartHover"></i>
-                      </div>
-                  </div>  
-                 <div class="menus">
+                <div class="nomDuRestaurant_titre">
+                    <h2>La note enchantée</h2>
+                    <div class="section_restaurants_carte_description_souhait icone_coeur">
+                        <i class="far fa-heart fa-heart-1 heartGout"></i>
+                        <i class="fas fa-heart heartHover"></i>
+                    </div>
+                </div>
+                <div class="menus">
                     <article class="menu menu-1">
-                    <div class="carteHeader">
-                      <h3>ENTRÉES <hr class="trait"></h3> 
-                    </div>
-                    <ol class="menuEntree">
-                        <li>
-                          <p class="menuTitre">Ravioles de foie gras</p>
-                          <p class="menuSousTitre"> Accompagnés de leur crème à la truffe</p>
-                          <div class="menuConfirmation">
-                            <span class="menuPrix">25€</span>
-                          </div>
-                        </li>
-                        <li>
-                          <p class="menuTitre">Caviar osciètre</p>
-                          <p class="menuSousTitre">Sur blini à la farine de blé noir</p>
-                          <div class="menuConfirmation">
-                            <span class="menuPrix">35€</span>
-                          </div>
-                          </li>
-                          <li>
-                            <p class="menuTitre">Homard et espuma de</p>
-                            <p class="menuSousTitre">Mariné aux zests d'orange</p>
-                            <div class="menuConfirmation">
-                              <span class="menuPrix">20€</span>
-                            </div>
-                          </li>
+                        <div class="carteHeader">
+                            <h3>
+                                ENTRÉES
+                                <hr class="trait" />
+                            </h3>
+                        </div>
+                        <ol class="menuEntree">
+                            <li>
+                                <p class="menuTitre">Ravioles de foie gras</p>
+                                <p class="menuSousTitre">
+                                    Accompagnés de leur crème à la truffe
+                                </p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">25€</span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="menuTitre">Caviar osciètre</p>
+                                <p class="menuSousTitre">Sur blini à la farine de blé noir</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">35€</span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="menuTitre">Homard et espuma de</p>
+                                <p class="menuSousTitre">Mariné aux zests d'orange</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">20€</span>
+                                </div>
+                            </li>
 
-                              <li>
-                            <p class="menuTitre">Foie gras de canard cuit entier</p>
-                            <p class="menuSousTitre">Confiture de figue et pain toasté</p>
-                            <div class="menuConfirmation">
-                              <span class="menuPrix">35€</span>
-                            </div>
-                          </li>
-                    </ol>         
-                  </article>
-                   <article class="menu menu-2">
-                    <div class="carteHeader">
-                      <h3>PLATS <hr class="trait"></h3> 
-                    </div>
-                    <ol class="menuEntree">
-                        <li>
-                          <p class="menuTitre">Noix de coquilles Saint-Jacques</p>
-                          <p class="menuSousTitre">Sur lit de purée de céleri-rave</p>
-                          <div class="menuConfirmation">
-                            <span class="menuPrix">40€</span>
-                          </div>
-                        </li>
-                        <li>
-                          <p class="menuTitre">Langoustine poêlée</p>
-                          <p class="menuSousTitre">Purée de patate douce</p>
-                          <div class="menuConfirmation">
-                            <span class="menuPrix">35€</span>
-                          </div>
-                          </li>
-                          <li>
-                            <p class="menuTitre">Mijoté de queue de boeufe</p>
-                            <p class="menuSousTitre">Et riz sauvage aux zestes de citron</p>
-                            <div class="menuConfirmation">
-                              <span class="menuPrix">44€</span>
-                            </div>
-                          </li>
-                    </ol>         
-                  </article>
-                   <article class="menu menu-3">
-                    <div class="carteHeader">
-                      <h3>DESSERTS <hr class="trait"></h3> 
-                    </div>
-                    <ol class="menuEntree">
-                        <li>
-                          <p class="menuTitre">Macaron noisette et chocolat</p>
-                          <p class="menuSousTitre">Glace au caramel brun et sel de Guérande</p>
-                          <div class="menuConfirmation">
-                            <span class="menuPrix">18€</span>
-                          </div>
-                        </li>
-                        <li>
-                          <p class="menuTitre">Baba au rhum revisité</p>
-                          <p class="menuSousTitre">Avec son coulis de citron</p>
-                          <div class="menuConfirmation">
-                            <span class="menuPrix">22€</span>
-                          </div>
-                          </li>
-                          <li>
-                            <p class="menuTitre">Tarte au citron meringuée</p>
-                            <p class="menuSousTitre">Déstructurée</p>
-                            <div class="menuConfirmation">
-                              <span class="menuPrix">23€</span>
-                            </div>
-                          </li>
-                    </ol>         
-                  </article>
-                 </div>
-          </section>
-    </section>
+                            <li>
+                                <p class="menuTitre">Foie gras de canard cuit entier</p>
+                                <p class="menuSousTitre">Confiture de figue et pain toasté</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">35€</span>
+                                </div>
+                            </li>
+                        </ol>
+                    </article>
+                    <article class="menu menu-2">
+                        <div class="carteHeader">
+                            <h3>
+                                PLATS
+                                <hr class="trait" />
+                            </h3>
+                        </div>
+                        <ol class="menuEntree">
+                            <li>
+                                <p class="menuTitre">Noix de coquilles Saint-Jacques</p>
+                                <p class="menuSousTitre">Sur lit de purée de céleri-rave</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">40€</span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="menuTitre">Langoustine poêlée</p>
+                                <p class="menuSousTitre">Purée de patate douce</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">35€</span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="menuTitre">Mijoté de queue de boeufe</p>
+                                <p class="menuSousTitre">
+                                    Et riz sauvage aux zestes de citron
+                                </p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">44€</span>
+                                </div>
+                            </li>
+                        </ol>
+                    </article>
+                    <article class="menu menu-3">
+                        <div class="carteHeader">
+                            <h3>
+                                DESSERTS
+                                <hr class="trait" />
+                            </h3>
+                        </div>
+                        <ol class="menuEntree">
+                            <li>
+                                <p class="menuTitre">Macaron noisette et chocolat</p>
+                                <p class="menuSousTitre">
+                                    Glace au caramel brun et sel de Guérande
+                                </p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">18€</span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="menuTitre">Baba au rhum revisité</p>
+                                <p class="menuSousTitre">Avec son coulis de citron</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">22€</span>
+                                </div>
+                            </li>
+                            <li>
+                                <p class="menuTitre">Tarte au citron meringuée</p>
+                                <p class="menuSousTitre">Déstructurée</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">23€</span>
+                                </div>
+                            </li>
+                        </ol>
+                    </article>
+                </div>
+            </section>
+        </section>
 
-       <section class="commander">
-          <button class="btn_commander">Commander</button>
-       </section>
-     
- </main>
+        <section class="commander">
+            <button class="btn_commander">Commander</button>
+        </section>
+    </main>
 
- 
-<!--footer-->
-<footer>
-    <div class="footer footer2">
-          <h5 class="footer_header">ohmyfood</h5>
-        <p class="proposerUnRestaurant footerInfos">
-          <i class="fas fa-utensils"></i>Proposer un restaurant
-        </p>
-        <p class="devenirPartenair footerInfos">
-          <i class="fas fa-hands-helping"></i>Devenir partenaire
-        </p>
-        <p class="mentionsLegales footerInfos">Mentions légales</p>
-     <p class="contact footerInfos"> <a href="mailto:info@ohmyfood.com">Contact </a> </p>
-    </div>
-</footer>
+    <!--footer-->
+    <footer>
+        <div class="footer footer2">
+            <h5 class="footer_header">ohmyfood</h5>
+            <p class="proposerUnRestaurant footerInfos">
+                <i class="fas fa-utensils"></i>Proposer un restaurant
+            </p>
+            <p class="devenirPartenair footerInfos">
+                <i class="fas fa-hands-helping"></i>Devenir partenaire
+            </p>
+            <p class="mentionsLegales footerInfos">Mentions légales</p>
+            <p class="contact footerInfos">
+                <a href="mailto:info@ohmyfood.com">Contact </a>
+            </p>
+        </div>
+    </footer>
 </body>
+
 </html>
