--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
 
-    <div id="chargement">
+    <section id="chargement">
         <div id="chargementSpinner">
-            <span class="spinner" id="spinner-1"></span>
+            <!-- <span class="spinner" id="spinner-1"></span> -->
         </div>
-    </div>
+    </section>
 
     <header>
         <nav class="header">
@@ -51,8 +51,7 @@
                 <div class="section_fonctionnement_btn">
                     <span class="section_fonctionnement_btn_etapes etape_1">1</span>
                     <span> <i class="fas fa-mobile-alt"></i></span>
-                    <span class="section_fonctionnement_btn_action">Choisissez votre
-restaurant</span>
+                    <span class="section_fonctionnement_btn_action">Choisissez votre restaurant</span>
                 </div>
                 <div class="section_fonctionnement_btn">
                     <span class="section_fonctionnement_btn_etapes etape_1">2</span>
@@ -64,6 +63,7 @@ restaurant</span>
                     <span> <i class="fas fa-store"></i></span>
                     <span class="section_fonctionnement_btn_action ">Dégustez au restaurant</span>
                 </div>
+            </div>
         </section>
 
         <section class="section_restaurants">
@@ -86,12 +86,12 @@ restaurant</span>
                                     <i class="fas fa-heart heartHover like"></i>
                                 </div>
                             </div>
+                        </div>
                     </a>
                 </article>
 
                 <article class="section_restaurants_carte carte carte_2">
                     <a href="pages_html/laNoteEnchantee.html" title="La note enchantée" target="_blank">
-
                         <div class="section_restaurants_carte_img cart_img img_1">
                             <div class="img_btn">
                                 <img src="img/restaurants/La-note-enchantée.jpg" alt="La palette du goût" />
@@ -107,12 +107,12 @@ restaurant</span>
                                     <i class="fas fa-heart heartHover like"></i>
                                 </div>
                             </div>
+                        </div>
                     </a>
                 </article>
 
                 <article class="section_restaurants_carte carte carte_3">
                     <a href="pages_html/aLaFrançaise.html" title="À la française" target="_blank">
-
                         <div class="section_restaurants_carte_img cart_img img_1">
                             <img src="img/restaurants/A-la-française.jpg" alt="La palette du goût" />
                         </div>
@@ -146,7 +146,7 @@ restaurant</span>
                         </div>
                     </a>
                 </article>
-                </div>
+            </div>
         </section>
     </main>
     <!--footer-->
