--- a/pages_html/laNoteEnchantee.html
+++ b/pages_html/laNoteEnchantee.html
@@ -37,12 +37,12 @@
                         <i class="fas fa-heart heartHover"></i>
                     </div>
                 </div>
-                <div class="menus">
+                <div class="menus menus_2">
                     <article class="menu menu-1">
                         <div class="carteHeader">
                             <h3>
                                 ENTRÉES
-                                <hr class="trait" />
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -79,11 +79,11 @@
                             </li>
                         </ol>
                     </article>
-                    <article class="menu menu-2">
+                    <article class="menu menu-2" id="menu-b">
                         <div class="carteHeader">
                             <h3>
                                 PLATS
-                                <hr class="trait" />
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -112,11 +112,11 @@
                             </li>
                         </ol>
                     </article>
-                    <article class="menu menu-3">
+                    <article class="menu menu-3" id="menu-c">
                         <div class="carteHeader">
                             <h3>
                                 DESSERTS
-                                <hr class="trait" />
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -150,7 +150,7 @@
         </section>
 
         <section class="commander">
-            <button class="btn_commander">Commander</button>
+            <button class="btn_commander btn-2">Commander</button>
         </section>
     </main>
 
