--- a/pages_html/laPaletteDuGout.html
+++ b/pages_html/laPaletteDuGout.html
@@ -39,8 +39,8 @@
                 <div class="menus">
                     <article class="menu menu-1">
                         <div class="carteHeader">
-                            <h3>ENTRÉES
-                                <hr class="trait">
+                            <h3>ENTRÉE
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -70,7 +70,7 @@
                     <article class="menu menu-2">
                         <div class="carteHeader">
                             <h3>PLATS
-                                <hr class="trait">
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -100,7 +100,7 @@
                     <article class="menu menu-3">
                         <div class="carteHeader">
                             <h3>DESSERTS
-                                <hr class="trait">
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
