--- a/pages_html/leDeliceDesSens.html
+++ b/pages_html/leDeliceDesSens.html
@@ -42,7 +42,7 @@
                         <div class="carteHeader">
                             <h3>
                                 ENTRÉES
-                                <hr class="trait" />
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -73,7 +73,7 @@
                         <div class="carteHeader">
                             <h3>
                                 PLATS
-                                <hr class="trait" />
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
@@ -104,7 +104,7 @@
                         <div class="carteHeader">
                             <h3>
                                 DESSERTS
-                                <hr class="trait" />
+                                <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
