--- a/pages_html/laNoteEnchantee.html
+++ b/pages_html/laNoteEnchantee.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <section class="restaurant">
             <div class="Restaurant_img">
                 <img src="../img/restaurants/La-note-enchantée.jpg" alt="La palette du goût" class="paletteDuGout_img" />
@@ -149,8 +149,8 @@
             </section>
         </section>
 
-        <section class="commander">
-            <button class="btn_commander btn-2">Commander</button>
+        <section class="commander" id="commander">
+            <button class="btn_commander btn-2" id="btn-2">Commander</button>
         </section>
     </main>
 
