--- a/pages_html/leDeliceDesSens.html
+++ b/pages_html/leDeliceDesSens.html
@@ -116,12 +116,11 @@
                                 </div>
                             </li>
                             <li>
-                                <p class="menuTitre">Crème brulée
-                                    <</p>
-                                        <p class="menuSousTitre">Revisité</p>
-                                        <div class="menuConfirmation">
-                                            <span class="menuPrix">22€</span>
-                                        </div>
+                                <p class="menuTitre">Crème brulée</p>
+                                <p class="menuSousTitre">Revisité</p>
+                                <div class="menuConfirmation">
+                                    <span class="menuPrix">22€</span>
+                                </div>
                             </li>
                             <li>
                                 <p class="menuTitre">MTiramisu</p>
