--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="desing/default.css" />
     <title>Ohmyfood-sass</title>
     <script src="https://kit.fontawesome.com/4fc20de488.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-
     <section id="chargement">
         <div id="chargementSpinner">
             <!-- <span class="spinner" id="spinner-1"></span> -->
@@ -25,7 +24,8 @@
     <header>
         <nav class="header">
             <h1>
-                <!--<img src="../img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/> <br>--><img src="./img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo" /></h1>
+                <!--<img src="../img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/> <br>--><img src="./img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo" />
+            </h1>
         </nav>
     </header>
     <!--main-->
@@ -51,118 +51,184 @@
                 <div class="section_fonctionnement_btn">
                     <span class="section_fonctionnement_btn_etapes etape_1">1</span>
                     <span> <i class="fas fa-mobile-alt"></i></span>
-                    <span class="section_fonctionnement_btn_action">Choisissez votre restaurant</span>
-                </div>
-                <div class="section_fonctionnement_btn">
-                    <span class="section_fonctionnement_btn_etapes etape_1">2</span>
+                    <span class="section_fonctionnement_btn_action">Choisissez votre restaurant</span
+						>
+					</div>
+					<div class="section_fonctionnement_btn">
+						<span class="section_fonctionnement_btn_etapes etape_1">2</span>
                     <span> <i class="fas fa-list-ul"></i></span>
-                    <span class="section_fonctionnement_btn_action">Composez votre menu</span>
-                </div>
-                <div class="section_fonctionnement_btn btn_action_3">
-                    <span class="section_fonctionnement_btn_etapes etape_1">3</span>
+                    <span class="section_fonctionnement_btn_action">Composez votre menu</span
+						>
+					</div>
+					<div class="section_fonctionnement_btn btn_action_3">
+						<span class="section_fonctionnement_btn_etapes etape_1">3</span>
                     <span> <i class="fas fa-store"></i></span>
-                    <span class="section_fonctionnement_btn_action ">Dégustez au restaurant</span>
-                </div>
-            </div>
-        </section>
+                    <span class="section_fonctionnement_btn_action">Dégustez au restaurant</span
+						>
+					</div>
+				</div>
+			</section>
 
-        <section class="section_restaurants">
-            <h2 class="section_restaurants_titre">Restaurants</h2>
-            <div class="section_restaurant_cartes">
-                <article class="section_restaurants_carte carte carte_1">
-                    <a href="pages_html/laPaletteDuGout.html" title="La palette du goût" target="_blank">
-                        <div class="section_restaurants_carte_img cart_img img_1">
-                            <div class="img_btn">
-                                <img src="img/restaurants/La-palette-du-goût.jpg" alt="La palette du goût" />
-                                <h3 class="nouveau">Nouveau</h3>
-                            </div>
-                            <div class="section_restaurants_carte_description carte_description">
-                                <div class=" carte_description_1">
-                                    <h4>La palette du goût</h4>
-                                    <p>Ménilmontant</p>
-                                </div>
-                                <div class="section_restaurants_carte_description_souhait icone_coeur">
-                                    <i class="far fa-heart fa-heart-1"></i>
-                                    <i class="fas fa-heart heartHover like"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </article>
+			<section class="section_restaurants">
+				<h2 class="section_restaurants_titre">Restaurants</h2>
+				<div class="section_restaurant_cartes">
+					<article class="section_restaurants_carte carte carte_1">
+						<a
+							href="pages_html/laPaletteDuGout.html"
+							title="La palette du goût"
+							target="_blank"
+						>
+							<div class="section_restaurants_carte_img cart_img img_1">
+								<div class="img_btn">
+									<img
+										src="img/restaurants/La-palette-du-goût.jpg"
+										alt="La palette du goût"
+									/>
+									<h3 class="nouveau">Nouveau</h3>
+								</div>
+								<div
+									class="
+										section_restaurants_carte_description
+										carte_description
+									"
+								>
+									<div class="carte_description_1">
+										<h4>La palette du goût</h4>
+										<p>Ménilmontant</p>
+									</div>
+									<div
+										class="
+											section_restaurants_carte_description_souhait
+											icone_coeur
+										"
+									>
+										<i class="far fa-heart fa-heart-1"></i>
+										<i class="fas fa-heart heartHover like"></i>
+									</div>
+								</div>
+							</div>
+						</a>
+					</article>
 
-                <article class="section_restaurants_carte carte carte_2">
-                    <a href="pages_html/laNoteEnchantee.html" title="La note enchantée" target="_blank">
-                        <div class="section_restaurants_carte_img cart_img img_1">
-                            <div class="img_btn">
-                                <img src="img/restaurants/La-note-enchantée.jpg" alt="La palette du goût" />
-                                <h3 class="nouveau">Nouveau</h3>
-                            </div>
-                            <div class="section_restaurants_carte_description carte_description">
-                                <div class=" carte_description_1">
-                                    <h4>La note enchantée</h4>
-                                    <p>Charonne</p>
-                                </div>
-                                <div class="section_restaurants_carte_description_souhait icone_coeur">
-                                    <i class="far fa-heart fa-heart-1"></i>
-                                    <i class="fas fa-heart heartHover like"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </article>
+					<article class="section_restaurants_carte carte carte_2">
+						<a
+							href="pages_html/laNoteEnchantee.html"
+							title="La note enchantée"
+							target="_blank"
+						>
+							<div class="section_restaurants_carte_img cart_img img_1">
+								<div class="img_btn">
+									<img
+										src="img/restaurants/La-note-enchantée.jpg"
+										alt="La palette du goût"
+									/>
+									<h3 class="nouveau">Nouveau</h3>
+								</div>
+								<div
+									class="
+										section_restaurants_carte_description
+										carte_description
+									"
+								>
+									<div class="carte_description_1">
+										<h4>La note enchantée</h4>
+										<p>Charonne</p>
+									</div>
+									<div
+										class="
+											section_restaurants_carte_description_souhait
+											icone_coeur
+										"
+									>
+										<i class="far fa-heart fa-heart-1"></i>
+										<i class="fas fa-heart heartHover like"></i>
+									</div>
+								</div>
+							</div>
+						</a>
+					</article>
 
-                <article class="section_restaurants_carte carte carte_3">
-                    <a href="pages_html/aLaFrançaise.html" title="À la française" target="_blank">
-                        <div class="section_restaurants_carte_img cart_img img_1">
-                            <img src="img/restaurants/A-la-française.jpg" alt="La palette du goût" />
-                        </div>
-                        <div class="section_restaurants_carte_description carte_description">
-                            <div class=" carte_description_1">
-                                <h4>À la française</h4>
-                                <p>Cité Roug</p>
-                            </div>
-                            <div class="section_restaurants_carte_description_souhait icone_coeur">
-                                <i class="far fa-heart fa-heart-1"></i>
-                                <i class="fas fa-heart heartHover like"></i>
-                            </div>
-                        </div>
-                    </a>
-                </article>
+					<article class="section_restaurants_carte carte carte_3">
+						<a
+							href="pages_html/aLaFrançaise.html"
+							title="À la française"
+							target="_blank"
+						>
+							<div class="section_restaurants_carte_img cart_img img_1">
+								<img
+									src="img/restaurants/A-la-française.jpg"
+									alt="La palette du goût"
+								/>
+							</div>
+							<div
+								class="section_restaurants_carte_description carte_description"
+							>
+								<div class="carte_description_1">
+									<h4>À la française</h4>
+									<p>Cité Roug</p>
+								</div>
+								<div
+									class="
+										section_restaurants_carte_description_souhait
+										icone_coeur
+									"
+								>
+									<i class="far fa-heart fa-heart-1"></i>
+									<i class="fas fa-heart heartHover like"></i>
+								</div>
+							</div>
+						</a>
+					</article>
 
-                <article class="section_restaurants_carte carte carte_4">
-                    <a href="pages_html/leDeliceDesSens.html" title="Le délice des sens" target="_blank">
-                        <div class="section_restaurants_carte_img cart_img img_1">
-                            <img src="img/restaurants/Le-délice-des-sens.jpg" alt="La palette du goût" />
-                        </div>
-                        <div class="section_restaurants_carte_description carte_description">
-                            <div class=" carte_description_1">
-                                <h4>Le délice des sens</h4>
-                                <p>Folie-Méricourt</p>
-                            </div>
-                            <div class="section_restaurants_carte_description_souhait icone_coeur">
-                                <i class="far fa-heart fa-heart-1"></i>
-                                <i class="fas fa-heart heartHover like"></i>
-                            </div>
-                        </div>
-                    </a>
-                </article>
-            </div>
-        </section>
-    </main>
-    <!--footer-->
-    <footer>
-        <div class="footer">
-            <h5 class="footer_header">ohmyfood</h5>
-            <p class="proposerUnRestaurant footerInfos">
-                <i class="fas fa-utensils"></i>Proposer un restaurant
-            </p>
-            <p class="devenirPartenair footerInfos">
-                <i class="fas fa-hands-helping"></i>Devenir partenaire
-            </p>
-            <p class="mentionsLegales footerInfos">Mentions légales</p>
-            <p class="contact footerInfos"> <a href="mailto:info@ohmyfood.com">Contact </a> </p>
-        </div>
-    </footer>
-</body>
-
+					<article class="section_restaurants_carte carte carte_4">
+						<a
+							href="pages_html/leDeliceDesSens.html"
+							title="Le délice des sens"
+							target="_blank"
+						>
+							<div class="section_restaurants_carte_img cart_img img_1">
+								<img
+									src="img/restaurants/Le-délice-des-sens.jpg"
+									alt="La palette du goût"
+								/>
+							</div>
+							<div
+								class="section_restaurants_carte_description carte_description"
+							>
+								<div class="carte_description_1">
+									<h4>Le délice des sens</h4>
+									<p>Folie-Méricourt</p>
+								</div>
+								<div
+									class="
+										section_restaurants_carte_description_souhait
+										icone_coeur
+									"
+								>
+									<i class="far fa-heart fa-heart-1"></i>
+									<i class="fas fa-heart heartHover like"></i>
+								</div>
+							</div>
+						</a>
+					</article>
+				</div>
+			</section>
+		</main>
+		<!--footer-->
+		<footer>
+			<div class="footer">
+				<h5 class="footer_header">ohmyfood</h5>
+				<p class="proposerUnRestaurant footerInfos">
+					<i class="fas fa-utensils"></i>Proposer un restaurant
+				</p>
+				<p class="devenirPartenair footerInfos">
+					<i class="fas fa-hands-helping"></i>Devenir partenaire
+				</p>
+				<p class="mentionsLegales footerInfos">Mentions légales</p>
+				<p class="contact footerInfos">
+					<a href="mailto:info@ohmyfood.com">Contact </a>
+				</p>
+			</div>
+		</footer>
+	</body>
 </html>
