--- a/pages_html/laPaletteDuGout.html
+++ b/pages_html/laPaletteDuGout.html
@@ -8,24 +8,25 @@
     <link rel="stylesheet" href="../desing/default.css" />
     <title>Ohmyfood_la palette du gout</title>
     <script src="https://kit.fontawesome.com/04b5a3f05a.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-
     <header>
         <nav class="header_paletteDuGout">
-            <a href="../index.html" title="Allez à l'accuil"> <i class="fas fa-arrow-left"></i> </a>
+            <a href="../index.html" title="Allez à l'accuil">
+                <i class="fas fa-arrow-left"></i>
+            </a>
             <img src="../img/logo/ohmyfood.png" alt="Logo_Ohmyfood" class="logo" />
         </nav>
     </header>
 
     <main>
         <section class="restaurant">
-            <div class="Restaurant_img ">
+            <div class="Restaurant_img">
                 <img src="../img/restaurants/La-palette-du-goût.jpg" alt="La palette du goût" class="paletteDuGout_img" />
             </div>
             <section class="restaurantEntresPlats">
@@ -39,7 +40,8 @@
                 <div class="menus">
                     <article class="menu menu-1">
                         <div class="carteHeader">
-                            <h3>ENTRÉE
+                            <h3>
+                                ENTRÉE
                                 <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
@@ -60,7 +62,9 @@
                             </li>
                             <li>
                                 <p class="menuTitre">Oeuf au plat</p>
-                                <p class="menuSousTitre">Assaisonné à la truffe sur lit de caviar</p>
+                                <p class="menuSousTitre">
+                                    Assaisonné à la truffe sur lit de caviar
+                                </p>
                                 <div class="menuConfirmation">
                                     <span class="menuPrix">20€</span>
                                 </div>
@@ -69,21 +73,26 @@
                     </article>
                     <article class="menu menu-2">
                         <div class="carteHeader">
-                            <h3>PLATS
+                            <h3>
+                                PLATS
                                 <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
                         <ol class="menuEntree">
                             <li>
                                 <p class="menuTitre">Filet de boeuf aux herbes</p>
-                                <p class="menuSousTitre">Accompagné de sa ribambelle de légumes</p>
+                                <p class="menuSousTitre">
+                                    Accompagné de sa ribambelle de légumes
+                                </p>
                                 <div class="menuConfirmation">
                                     <span class="menuPrix">40€</span>
                                 </div>
                             </li>
                             <li>
                                 <p class="menuTitre">Parmentier de queue de boeuf</p>
-                                <p class="menuSousTitre">A la truffe noire sur sa purée de panais</p>
+                                <p class="menuSousTitre">
+                                    A la truffe noire sur sa purée de panais
+                                </p>
                                 <div class="menuConfirmation">
                                     <span class="menuPrix">35€</span>
                                 </div>
@@ -99,7 +108,8 @@
                     </article>
                     <article class="menu menu-3">
                         <div class="carteHeader">
-                            <h3>DESSERTS
+                            <h3>
+                                DESSERTS
                                 <!-- <hr class="trait" /> -->
                             </h3>
                         </div>
@@ -113,14 +123,18 @@
                             </li>
                             <li>
                                 <p class="menuTitre">Macaron au chocolat d'exception</p>
-                                <p class="menuSousTitre">Et glace à la vanille de Madagascar</p>
+                                <p class="menuSousTitre">
+                                    Et glace à la vanille de Madagascar
+                                </p>
                                 <div class="menuConfirmation">
                                     <span class="menuPrix">22€</span>
                                 </div>
                             </li>
                             <li>
                                 <p class="menuTitre">Mousse au chocolat</p>
-                                <p class="menuSousTitre">Au piment d'Espelette et à la truffe noire</p>
+                                <p class="menuSousTitre">
+                                    Au piment d'Espelette et à la truffe noire
+                                </p>
                                 <div class="menuConfirmation">
                                     <span class="menuPrix">23€</span>
                                 </div>
@@ -134,7 +148,6 @@
         <section class="commander">
             <button class="btn_commander">Commander</button>
         </section>
-
     </main>
 
     <!--footer-->
@@ -148,7 +161,9 @@
                 <i class="fas fa-hands-helping"></i>Devenir partenaire
             </p>
             <p class="mentionsLegales footerInfos">Mentions légales</p>
-            <p class="contact footerInfos"> <a href="mailto:info@ohmyfood.com">Contact </a> </p>
+            <p class="contact footerInfos">
+                <a href="mailto:info@ohmyfood.com">Contact </a>
+            </p>
         </div>
     </footer>
 </body>
